@@ -1,23 +1,18 @@
 package perosnal.spotifymatcher.service;
 
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 
 import lombok.RequiredArgsConstructor;
 
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import perosnal.spotifymatcher.model.User;
-import perosnal.spotifymatcher.api.SpotifyAPI;
 import perosnal.spotifymatcher.repository.UserRepository;
+import perosnal.spotifymatcher.util.AuthorizedActionResult;
 
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.util.ArrayList;
-import java.util.Collections;
+
+
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,19 +21,18 @@ public class UserService {
 
     private final UserRepository userRepository;
 
-
-    public List<User> match(String accessToken) {
+    public Optional<List<User>> match(String accessToken) {
         User user = userRepository.findByTokenAccessToken(accessToken);
         List<User> matches = filterMatches(user, userRepository.getMatches(user.getId(), 3));
         if (user.getBiography()==null) {
-            return null;
+            return Optional.empty();
         }
         if (matches.size() > 0) {
-            user.getMatches().addAll(matches.stream().map(User::getId).collect(Collectors.toList()));
+            user.getMatches().addAll(matches.stream().map(User::getId).toList());
             userRepository.save(user);
-            return matches;
+            return Optional.of(matches);
         }
-        return Collections.emptyList();
+        return Optional.empty();
     }
 
     public void blockUser(String accessToken, String id) {
@@ -48,14 +42,14 @@ public class UserService {
     }
 
 
-    public boolean setBio(String token, String bio) {
+    public AuthorizedActionResult setBio(String token, String bio) {
         User user = userRepository.findByTokenAccessToken(token);
         if (bio.length() > 20) {
             user.setBiography(bio);
             userRepository.save(user);
-            return true;
+            return AuthorizedActionResult.SUCCESS;
         }
-        return false;
+        return AuthorizedActionResult.FAILURE;
     }
 
     public List<User> filterMatches(User user, List<User> matches) {
@@ -69,17 +63,18 @@ public class UserService {
     }
 
     public List<User> getMatches(String accessToken) {
-        User user = userRepository.findByTokenAccessToken(accessToken);
-        List<User> matches = new ArrayList<>();
-        user.getMatches()
-                .forEach(match -> matches.add(userRepository.findById(match).get()));
-        return matches;
+        return userRepository.findByTokenAccessToken(accessToken)
+                .getMatches()
+                .stream()
+                .map(userRepository::findById)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
     }
 
 
     public List<String> getTopTracks(String accessToken) {
-        User user = userRepository.findByTokenAccessToken(accessToken);
-        return user.getTracks();
+        return userRepository.findByTokenAccessToken(accessToken).getTracks();
     }
 
 
